// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editUser Saga should call the usersEditingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://localhost:5000/users/1",
      Object {
        "body": "{\\"id\\":1}",
        "headers": Object {
          "Content-Type": "Application/json",
        },
        "method": "PUT",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`editUser Saga should dispatch the userEdited action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://localhost:5000/users/1",
      Object {
        "body": "{\\"id\\":1}",
        "headers": Object {
          "Content-Type": "Application/json",
        },
        "method": "PUT",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getUser Saga should call the usersLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://localhost:5000/users/1",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getUser Saga should dispatch the userLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://localhost:5000/users/1",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
